fix: scrollbar gutter

--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,6 @@ canvas {
 
 @layer base {
   :root {
-    scrollbar-gutter: stable;
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
